ingress-certmanager-letsencrypt/hello-world-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-poc
spec:
  tls:
    - hosts:
        - hello-world-ingress.poc.automation.kirrk.com
      secretName: tls-secret
  rules:
    - host: hello-world-ingress.poc.automation.kirrk.com
      http:
        paths:
          - backend:
              serviceName: aks-helloworld
              servicePort: 80
            path: /(.*)
          - backend:
              serviceName: aks-helloworld-two
              servicePort: 80
            path: /hello-world-two(/|$)(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    cert-manager.io/cluster-issuer: letsencrypt-poc
spec:
  tls:
    - hosts:
        - hello-world-ingress.poc.automation.kirrk.com
      secretName: tls-secret
  rules:
    - host: hello-world-ingress.poc.automation.kirrk.com
      http:
        paths:
          - backend:
              serviceName: aks-helloworld
              servicePort: 80
            path: /static(/|$)(.*)
